// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PlatformCard /> should choose card image 1`] = `
<PlatformCard
  description="desc"
  modified="Foo"
>
  <GalleryItem>
    <div>
      <Styled(Card)>
        <Card
          className="sc-AxhUy kEBXQD"
        >
          <article
            className="pf-c-card sc-AxhUy kEBXQD"
            data-ouia-component-id="OUIA-Generated-Card-2"
            data-ouia-component-type="PF4/Card"
            data-ouia-safe={true}
          >
            <CardHeader>
              <div
                className="pf-c-card__header"
              >
                <ImageWithDefault
                  height="40"
                  src="test-file-stub"
                  width="80"
                >
                  <img
                    height="40"
                    src="test-file-stub"
                    width="80"
                  />
                </ImageWithDefault>
              </div>
            </CardHeader>
            <Styled(CardBody)>
              <CardBody
                className="sc-AxheI jOYejY"
              >
                <div
                  className="pf-c-card__body sc-AxheI jOYejY"
                >
                  <TextContent>
                    <div
                      className="pf-c-content"
                    >
                      <CatalogLink
                        pathname="/platform/platform-templates"
                        searchParams={
                          Object {
                            "platform": undefined,
                          }
                        }
                      >
                        <Styled(Component)
                          to={
                            Object {
                              "hash": undefined,
                              "pathname": "/platform/platform-templates",
                              "search": "?platform=undefined",
                            }
                          }
                        >
                          <Component
                            className="sc-AxiKw drCTeX"
                            to={
                              Object {
                                "hash": undefined,
                                "pathname": "/platform/platform-templates",
                                "search": "?platform=undefined",
                              }
                            }
                          >
                            <Link
                              className="sc-AxiKw drCTeX"
                              to={
                                Object {
                                  "hash": undefined,
                                  "pathname": "/platform/platform-templates",
                                  "search": "?platform=undefined",
                                }
                              }
                            >
                              <LinkAnchor
                                className="sc-AxiKw drCTeX"
                                href="/platform/platform-templates?platform=undefined"
                                navigate={[Function]}
                              >
                                <a
                                  className="sc-AxiKw drCTeX"
                                  href="/platform/platform-templates?platform=undefined"
                                  onClick={[Function]}
                                >
                                  <Text
                                    className="pf-u-mb-0"
                                    component="h3"
                                  >
                                    <h3
                                      className="pf-u-mb-0"
                                      data-pf-content={true}
                                    >
                                      <styled.div>
                                        <div
                                          className="sc-AxirZ ZcaGf"
                                        />
                                      </styled.div>
                                    </h3>
                                  </Text>
                                </a>
                              </LinkAnchor>
                            </Link>
                          </Component>
                        </Styled(Component)>
                      </CatalogLink>
                    </div>
                  </TextContent>
                  <ItemDetails
                    description="desc"
                    modified="Foo"
                    toDisplay={
                      Array [
                        "description",
                        "modified",
                      ]
                    }
                  >
                    <styled.div
                      key="card-prop-description"
                    >
                      <div
                        className="sc-AxjAm hDziHm"
                      >
                        desc
                      </div>
                    </styled.div>
                    <styled.div
                      key="card-prop-modified"
                    >
                      <div
                        className="sc-AxjAm hDziHm"
                      >
                        Foo
                      </div>
                    </styled.div>
                  </ItemDetails>
                </div>
              </CardBody>
            </Styled(CardBody)>
            <CardFooter>
              <div
                className="pf-c-card__footer"
              />
            </CardFooter>
          </article>
        </Card>
      </Styled(Card)>
    </div>
  </GalleryItem>
</PlatformCard>
`;

exports[`<PlatformCard /> should render correctly 1`] = `
<PlatformCard
  description="desc"
  modified="Foo"
>
  <GalleryItem>
    <div>
      <Styled(Card)>
        <Card
          className="sc-AxhUy kEBXQD"
        >
          <article
            className="pf-c-card sc-AxhUy kEBXQD"
            data-ouia-component-id="OUIA-Generated-Card-1"
            data-ouia-component-type="PF4/Card"
            data-ouia-safe={true}
          >
            <CardHeader>
              <div
                className="pf-c-card__header"
              >
                <ImageWithDefault
                  height="40"
                  src="test-file-stub"
                  width="80"
                >
                  <img
                    height="40"
                    src="test-file-stub"
                    width="80"
                  />
                </ImageWithDefault>
              </div>
            </CardHeader>
            <Styled(CardBody)>
              <CardBody
                className="sc-AxheI jOYejY"
              >
                <div
                  className="pf-c-card__body sc-AxheI jOYejY"
                >
                  <TextContent>
                    <div
                      className="pf-c-content"
                    >
                      <CatalogLink
                        pathname="/platform/platform-templates"
                        searchParams={
                          Object {
                            "platform": undefined,
                          }
                        }
                      >
                        <Styled(Component)
                          to={
                            Object {
                              "hash": undefined,
                              "pathname": "/platform/platform-templates",
                              "search": "?platform=undefined",
                            }
                          }
                        >
                          <Component
                            className="sc-AxiKw drCTeX"
                            to={
                              Object {
                                "hash": undefined,
                                "pathname": "/platform/platform-templates",
                                "search": "?platform=undefined",
                              }
                            }
                          >
                            <Link
                              className="sc-AxiKw drCTeX"
                              to={
                                Object {
                                  "hash": undefined,
                                  "pathname": "/platform/platform-templates",
                                  "search": "?platform=undefined",
                                }
                              }
                            >
                              <LinkAnchor
                                className="sc-AxiKw drCTeX"
                                href="/platform/platform-templates?platform=undefined"
                                navigate={[Function]}
                              >
                                <a
                                  className="sc-AxiKw drCTeX"
                                  href="/platform/platform-templates?platform=undefined"
                                  onClick={[Function]}
                                >
                                  <Text
                                    className="pf-u-mb-0"
                                    component="h3"
                                  >
                                    <h3
                                      className="pf-u-mb-0"
                                      data-pf-content={true}
                                    >
                                      <styled.div>
                                        <div
                                          className="sc-AxirZ ZcaGf"
                                        />
                                      </styled.div>
                                    </h3>
                                  </Text>
                                </a>
                              </LinkAnchor>
                            </Link>
                          </Component>
                        </Styled(Component)>
                      </CatalogLink>
                    </div>
                  </TextContent>
                  <ItemDetails
                    description="desc"
                    modified="Foo"
                    toDisplay={
                      Array [
                        "description",
                        "modified",
                      ]
                    }
                  >
                    <styled.div
                      key="card-prop-description"
                    >
                      <div
                        className="sc-AxjAm hDziHm"
                      >
                        desc
                      </div>
                    </styled.div>
                    <styled.div
                      key="card-prop-modified"
                    >
                      <div
                        className="sc-AxjAm hDziHm"
                      >
                        Foo
                      </div>
                    </styled.div>
                  </ItemDetails>
                </div>
              </CardBody>
            </Styled(CardBody)>
            <CardFooter>
              <div
                className="pf-c-card__footer"
              />
            </CardFooter>
          </article>
        </Card>
      </Styled(Card)>
    </div>
  </GalleryItem>
</PlatformCard>
`;
